--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,9 @@
-# Use a lightweight Java image
-FROM eclipse-temurin:17-jdk-alpine
-
-# Set working directory
+FROM maven:3.9-eclipse-temurin-17 AS build
 WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-# Copy jar from target (after mvn build)
-COPY target/student-library-management-system-0.0.1-SNAPSHOT.jar app.jar
-
-# Expose the port Spring Boot runs on
-EXPOSE 8080
-
-# Run the jar
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
