--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - type: web
+  - type: worker
     name: mysql-db
     env: docker
     repo: https://github.com/Himmu9131/student-library-management-system
