git add docker-compose.yml render.yaml git commit -m "feat: add final docker-compose and render blueprint" git push

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+
+
 version: "3.8"
 
 services:
@@ -14,6 +16,7 @@ services:
   library-backend:
     build:
       context: ./backend
+    container_name: library-backend
     depends_on:
       - mysql-db
     ports:
