--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=student-library-management-system
 
 
 
-spring.datasource.url=jdbc:mysql://sql5.freesqldatabase.com:3306/sql5793165
-spring.datasource.username=sql5793165
-spring.datasource.password=QHACB7wC77
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username={DATASOURCE_USERNAME}
+spring.datasource.password={DATASOURCE_PASSWORD}
 #this will show sql queries running in the console
 spring.jpa.show-sql=true
 #for automatically updating database after every change
