--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=student-library-management-system
 
 
 spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username={DATASOURCE_USERNAME}
-spring.datasource.password={DATASOURCE_PASSWORD}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 #this will show sql queries running in the console
 spring.jpa.show-sql=true
 #for automatically updating database after every change
